# joyfully

./: ISSUE_TEMPLATE.md  README.md  SECURITY.md  contributing.md  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/templates/: bug_template.md  feature_template.md
.github/workflows/: test.yml
src/joyfully/: joyfully.py
tests/: test_joyfully.py
workflows/: test.yml
