[tool.poetry]
name = "joyfully"
version = "0.1.0"
description = "Write more joyful code"
authors = ["Will Fitzgerald <37049+willf@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "joyfully", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
