[tool.poetry]
name = "joyfully"
version = "0.1.0"
description = "Write more joyful code"
authors = ["Will Fitzgerald <37049+willf@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "joyfully", from = "src"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7" # minimum version.


[tool.poetry.dev-dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
isort = "^5.10.1"
coverage = "^6.4.4"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
pytest = "^7.1.3"
isort = "^5.10.1"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black"
